assets/css/navbar-component.css
.nav-bar{
  display: flex;
  align-items: center;
  justify-content: center;
  background: white;
  position: fixed;
  width: 100%;
  z-index: 999;
  top: 0;
}
a.logo{
  font-size: 25px;
  cursor: pointer;
  padding:9px;
  text-decoration: none;
  color: rgba(0,0,0,0.65);
  font-weight: 700;
}

.nav-bar a.nav-link{
  text-decoration: none;
  margin: 12px;
  font-size: 18px;
  color: rgba(0,0,0,0.65);
}

.nav-bar .join{
  border-bottom: 3px solid dodgerblue;
}
.nav-bar a.nav-link:hover{
  border-top: 2px solid dodgerblue;
  color: dodgerblue; /* or #1890ff */
}
.nav-bar a.nav-link:hover{
  border-bottom: none;
}

.spacer {
  flex: 1;
}

/* Mobile */

/* Mobile View */
@media screen and (max-width:700px){
  .nav-bar{
    margin-top: 23px;
    flex-direction: column;
    position: static;
    height: 180px;
  }

  .nav-bar a.nav-link {
    font-size: 16px;
  }
}

